--- a/package.json
+++ b/package.json
@@ -9,19 +9,41 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/pro-regular-svg-icons": "^6.4.2",
+    "@fortawesome/pro-solid-svg-icons": "^6.4.2",
+    "@fortawesome/pro-thin-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@tanstack/react-table": "^8.10.7",
+    "chart.js": "^4.4.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "chat-promptly": "^1.2.2",
+    "encoding": "^0.1.13",
+    "firebase": "^10.5.0",
+    "framer-motion": "^10.16.4",
+    "next": "13.5.6",
+    "next-redux-wrapper": "^8.1.0",
+    "rc-slider": "^10.3.1",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "next": "13.5.6"
+    "react-redux": "^8.1.3",
+    "react-select": "^5.7.7",
+    "react-step-progress-bar": "^1.0.3",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/chart.js": "^2.9.39",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8",
-    "eslint-config-next": "13.5.6"
+    "eslint-config-next": "13.5.6",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.4",
+    "typescript": "^5"
   }
 }
